# pig

./: .gitattributes  .gitignore  README.md  compare_codecs.py  crop_bikes.py  main.py  pleno_config.json  pyproject.toml
datasets/images/: bikes_128x128.pgm  bikes_16x16.pgm  bikes_64x64.pgm  bikes_cropped.pgm  bikes_middle_view.pgm  cameraman.pgm  girlface.pgm  man.pgm
demos/: mule_visualization.ipynb
jpig/codecs/: __init__.py  blocked_mico.py  blocked_mico_quantized.py  blocked_mule.py  whole_image_mico.py  whole_image_mule.py
jpig/entropy/: __init__.py  cabac.py  cabac_decoder.py  cabac_encoder.py  frequentist_probability_model.py  mule.py  mule_decoder.py  mule_encoder.py  probability_model.py
jpig/entropy/cabac/: cabac_decoder.py  cabac_encoder.py
jpig/entropy/mico/: _mico_encoder_old.py  mico_decoder.py  mico_decoder_rd.py  mico_encoder.py  mico_encoder_rd.py  mico_optimizer.py  mico_probability_handler.py  utils.py
jpig/entropy/mule/: mule_decoder.py  mule_encoder.py  mule_optimizer.py  mule_probability_handler.py
jpig/media/: __init__.py  image.py  lightfield.py
jpig/metrics/: __init__.py  binary_metrics.py  image_metrics.py  rate_distortion.py  rd_curve.py
jpig/utils/: block_utils.py  pgx_handler.py
pig/codecs/: blocked_mico.py  blocked_mule.py  whole_image_mico.py  whole_image_mule.py
pig/entropy/cabac/: cabac_decoder.py  (+1 more)
pig/media/: image.py  lightfield.py
pig/metrics/: __init__.py  image_metrics.py  rd_curve.py
pig/utils/: block_utils.py
tests/: test_block_utils.py  test_cabac.py  test_mico.py  test_mico_rd.py  test_mule.py
(+20 files in other folders)
