[tool.poetry]
name = "jpig"
version = "0.1.0"
description = ""
authors = ["André Fernandes <fpf.andre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
